task-3/evidence/authorization-policies-final.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: AuthorizationPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"allow-reporting-to-ledger","namespace":"payments"},"spec":{"action":"ALLOW","rules":[{"from":[{"source":{"principals":["cluster.local/ns/payments/sa/reporting"]}}],"to":[{"operation":{"ports":["8080"]}}]}],"selector":{"matchLabels":{"app":"ledger-api"}}}}
    creationTimestamp: "2026-07-22T17:55:22Z"
    generation: 1
    name: allow-reporting-to-ledger
    namespace: payments
    resourceVersion: "35691"
    uid: c85eb25f-cdcf-496e-af16-88ac5c189c08
  spec:
    action: ALLOW
    rules:
    - from:
      - source:
          principals:
          - cluster.local/ns/payments/sa/reporting
      to:
      - operation:
          ports:
          - "8080"
    selector:
      matchLabels:
        app: ledger-api
- apiVersion: security.istio.io/v1
  kind: AuthorizationPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"default-deny","namespace":"payments"},"spec":{}}
    creationTimestamp: "2026-07-22T17:52:41Z"
    generation: 1
    name: default-deny
    namespace: payments
    resourceVersion: "34989"
    uid: dea5d00f-c7e8-4de7-8674-942cefc0d534
  spec: {}
kind: List
metadata:
  resourceVersion: ""
