task-3/evidence/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"ledger-api-network-policy","namespace":"payments"},"spec":{"egress":[{}],"ingress":[{"from":[{"podSelector":{"matchLabels":{"app":"reporting"}}}],"ports":[{"port":8080,"protocol":"TCP"}]},{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"ingress-nginx"}},"podSelector":{"matchLabels":{"app.kubernetes.io/component":"controller"}}}],"ports":[{"port":8080,"protocol":"TCP" [...]
  creationTimestamp: "2026-07-22T11:04:15Z"
  generation: 2
  name: ledger-api-network-policy
  namespace: payments
  resourceVersion: "4921"
  uid: f473ed2a-3b07-48fa-b924-64651a5cfb86
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: reporting
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: ledger-api
  policyTypes:
  - Ingress
  - Egress
