task-3/evidence/peer-authentication.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1","kind":"PeerAuthentication","metadata":{"annotations":{},"name":"payments-strict-mtls","namespace":"payments"},"spec":{"mtls":{"mode":"STRICT"}}}
    creationTimestamp: "2026-07-22T17:49:45Z"
    generation: 1
    name: payments-strict-mtls
    namespace: payments
    resourceVersion: "34221"
    uid: 91a28e2c-3f7c-43f9-b1b7-420cc02693d5
  spec:
    mtls:
      mode: STRICT
kind: List
metadata:
  resourceVersion: ""
