task-3/evidence/require-run-as-non-root-original.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{},"name":"require-run-as-non-root"},"spec":{"background":true,"rules":[{"match":{"any":[{"resources":{"kinds":["Pod"]}}]},"name":"require-run-as-non-root","validate":{"message":"Containers must run as non-root.","pattern":{"spec":{"securityContext":{"runAsNonRoot":true}}}}}],"validationFailureAction":"Enforce"}}
  creationTimestamp: "2026-07-22T11:17:03Z"
  generation: 1
  name: require-run-as-non-root
  resourceVersion: "23811"
  uid: 191fbd59-f9f5-4514-93e5-5cd69ab1b111
spec:
  admission: true
  background: true
  emitWarning: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: require-run-as-non-root
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      message: Containers must run as non-root.
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
  validationFailureAction: Enforce
status:
  autogen:
    rules:
    - match:
        any:
        - resources:
            kinds:
            - apps/v1/DaemonSet
            - apps/v1/Deployment
            - batch/v1/Job
            - apps/v1/ReplicaSet
            - v1/ReplicationController
            - apps/v1/StatefulSet
        resources: {}
      name: autogen-require-run-as-non-root
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Containers must run as non-root.
        pattern:
          spec:
            template:
              spec:
                securityContext:
                  runAsNonRoot: true
    - match:
        any:
        - resources:
            kinds:
            - batch/v1/CronJob
        resources: {}
      name: autogen-cronjob-require-run-as-non-root
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Containers must run as non-root.
        pattern:
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    securityContext:
                      runAsNonRoot: true
  conditions:
  - lastTransitionTime: "2026-07-22T17:12:19Z"
    message: Ready
    reason: Succeeded
    status: "True"
    type: Ready
  rulecount:
    generate: 0
    mutate: 0
    validate: 1
    verifyimages: 0
  validatingadmissionpolicy:
    generated: false
    message: skip generating ValidatingAdmissionPolicy for non CEL rules.
